# PyProteomics

./: .gitignore  README.md  contaminants.py  filtering.py  helper.py  imputation.py  lukas was here  plotting_proteomics.py  ppy_statistics.py  pyproject.toml  requirements.txt  test
JupyterNotebooks/: 20241116_Test1.ipynb  20241116_Test2.ipynb  20250117_Imputation.ipynb  Proteomics_for_SpatialData.ipynb  Test1.ipynb  Test2.ipynb  Test3.ipynb  Test3_Imputation.ipynb  Test4_Plotting.ipynb  Test5_Enrichment.ipynb
data/: Metadata_for_FloriaW.xlsx  metadata.csv  metadata.txt  report.pg_matrix.tsv  valid_filtered.csv
functions/: enrichment.py  imputation.py
pypro/: QCplot.py  filtering.py  helper.py  imputation.py  io.py  old_functions.py  plotting.py
src/: maths.py  plotting.py
src/pyproteomics/: __init__.py  bootstrap.py  enrichment.py  filtering.py  helper.py  imputation.py  metrics.py  plotting.py  ppy_statistics.py  spatial.py
src/pyproteomics/anndata_utils/: __init__.py  calculate_category_averages.py  save_adata_checkpoint.py
src/pyproteomics/enrichment/: __init__.py  plot_MLM_heatmap.py  plot_ORA_heatmap.py  plot_ORA_source_variables.py
src/pyproteomics/filtering/: __init__.py  filtering.py
src/pyproteomics/imputation/: __init__.py  gaussian.py  impute_single.py
src/pyproteomics/io/: DIANN_to_adata.py  __init__.py  adata_to_perseus.py  perseus_to_adata.py
src/pyproteomics/plotting/: CV.py  PCA.py  PCA_loadings.py  __init__.py  abundance_histograms.py  density.py  (+9 more)
tests/: test_filtering.py  test_helper.py
tests/data/: 20241217_DIANN_metadata.csv
(+23 files in other folders)
