[project]
authors = [{name = "Jose Nimo", email = "nimojose@gmail.com"}]
description = "Add a short description here"
name = "PyProteomics"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["rich>=13.9.4,<14"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pyproteomics = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.8.3,<0.9"
pygments = ">=2.18.0,<3"
pandas = ">=2.2.3,<3"
anndata = ">=0.11.1,<0.12"
numpy = "*"
loguru = ">=0.7.2,<0.8"
scanpy = "*"
numba = "*"
tabulate = ">=0.9.0,<0.10"
rich = ">=13.9.4,<14"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
default = { solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]

# [tool.hatch.build.targets.wheel]
# packages = ["/pyproteomics/"]